# modelgenerator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  setup.sh  start.sh
.atl/: skill-registry.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: files.py  health.py  jobs.py
backend/app/core/: config.py  logging.py
backend/app/db/: database.py
backend/app/models/: job.py
backend/app/schemas/: job.py
backend/app/services/: animation.py  animation_enhancer.py  animation_mocap.py  animation_utils.py  animator_2d.py  base.py  body_layer.py  character_2d.py  export.py  factory.py  generative_animator_2d.py  image_to_3d.py  image_to_3d_instantmesh.py  multiview_extractor.py  part_segmenter.py  pose_sequences.py  refinement.py  scene.py  skin_generator.py  spritesheet_export.py  storage.py  text_to_image.py  texturing.py  uv_texturing.py
backend/app/services/mocap_data/: README.md  attack.bvh  dance.bvh  generate_bvh.py  idle.bvh  jump.bvh  run.bvh  walk.bvh
backend/app/services/tsr_local/: __init__.py
backend/app/services/tsr_local/models/: isosurface.py
backend/app/workers/: background.py  orchestrator.py  runner.py
backend/scripts/: migrate_anim_params.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: JobCard.tsx  ModelViewer.tsx  PromptForm.tsx  RecentJobs.tsx  SpritePreview.tsx  (+2 more)
scripts/: start-backend.sh  start-frontend.sh  start-worker.sh
(+5 files in other folders)
